# JucerSoundAnalysis

./: CMakeLists.txt  JUCE_Tutorial.jucer  imgui.ini
Source/: Main.cpp
Source/Analysis/: AudioAnalyzer.cpp  AudioAnalyzer.h
Source/Analysis/Parameters/: AMDFF0Parameter.h  AMDFParameter.h  AutocorrelationF0Parameter.h  AutocorrelationParameter.h  CrestFactorParameter.h  IAudioParameter.h  IsVoicedParameter.h  STEParameter.h  SilenceDetectorParameter.h  SilentRatioParameter.h  VolumeParameter.h  ZCRParameter.h
Source/GUI/: MainComponent.cpp  MainComponent.h  MenuModel.cpp
Source/GUI/Menu/: MenuModel.cpp  MenuModel.h
Source/GUI/Model/: AudioModel.cpp  AudioModel.h
Source/GUI/Panels/: ClipParametersPanel.cpp  ClipParametersPanel.h  FrameParametersPanel.cpp  FrameParametersPanel.h  HeaderPanel.cpp  HeaderPanel.h  WaveformPanel.cpp  WaveformPanel.h
